--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "google-auth-library": "^9.6.3",
+    "google-spreadsheet": "^4.1.1",
+    "http": "^0.0.1-security",
+    "http-server": "^14.1.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
+    "stream": "^0.0.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
