--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SPREADSHEET_ID = "1KgsJGH0ATvMPzfuclQ6GmU27St5F9okqMoX40GpP9bs"
+REACT_APP_SPREADSHEET_ID = "1INz4zcQHHMUi7sULzq6678cmPHu_06CcoDEnydZnqPk"
+REACT_APP_CLIENT_ID = "1082932819853-9qf58rfl4ttun3er9j4rodiajs5tfge9.apps.googleusercontent.com"
