--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sort-by": "^1.2.0",
     "stream": "^0.0.2",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
