--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_SPREADSHEET_ID = "1INz4zcQHHMUi7sULzq6678cmPHu_06CcoDEnydZnqPk"
-REACT_APP_CLIENT_ID = "1082932819853-9qf58rfl4ttun3er9j4rodiajs5tfge9.apps.googleusercontent.com"
+REACT_APP_BACKEND_URL = "https://flood-be.chaincortex.xyz/transfer-infos"
