--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-server": "^14.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
